# elder_care_mvp

./: Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 09eb325dbb12_initial_migration_for_user_info_table.py  add_indexes_to_user_info.py  ecf444f17e34_add_default_timestamp_to_user_info.py
app/: main.py
app/data/: __init__.py  user_info.py
app/fake/: location.py  user_info.py
app/model/: user_info.py
app/scripts/: detailed_trajectory_test.py  quick_test.py  simple_trajectory_test.py  test_fixed_user.py  test_fixed_users.py  test_interpolation.py  test_new_users.py
app/service/: custom_trajectory_updater.py  location_updater.py  user_info.py  user_info_db.py
app/web/: user_info.py  user_info_v1.py  user_info_v2.py
