[project]
name = "elder-care-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
elder-care-mvp = "app.main:app"
